tests/fixtures/invalid/min_int_bytes.py
# Cannot call min() with Int, Bytes
x = min(1, b"hello")
